fix: update sonar