@@ -2,7 +2,6 @@ package com.oner365.data.jpa.query;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.oner365.data.commons.util.DataUtils;
 import com.oner365.data.jpa.query.Criterion.Operator;
@@ -140,7 +139,7 @@ public class Restrictions {
         }
         List<SimpleExpression> simpleExpressionList = value.stream()
             .map(obj -> new SimpleExpression(fieldName, obj, Operator.EQ))
-            .collect(Collectors.toList());
+            .toList();
         return new LogicalExpression(simpleExpressionList.toArray(new SimpleExpression[] {}), Operator.OR);
     }
 
