@@ -2,9 +2,6 @@ package com.oner365.sys.controller.datasource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.annotation.Resource;
 
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -26,8 +23,9 @@ import com.oner365.sys.dto.DataSourceConfigDto;
 import com.oner365.sys.service.IDataSourceConfigService;
 import com.oner365.sys.vo.DataSourceConfigVo;
 
-import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.annotation.Resource;
 
 /**
  * 数据源
@@ -102,7 +100,7 @@ public class DataSourceConfigController extends BaseController {
     @SysLog("数据源删除")
     @DeleteMapping("/delete")
     public List<Boolean> delete(@RequestBody String... ids) {
-        return Arrays.stream(ids).map(id -> service.deleteById(id)).collect(Collectors.toList());
+        return Arrays.stream(ids).map(id -> service.deleteById(id)).toList();
     }
 
 }
