@@ -2,9 +2,6 @@ package com.oner365.sys.controller.system;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.annotation.Resource;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -29,8 +26,9 @@ import com.oner365.sys.service.ISysMenuOperationService;
 import com.oner365.sys.vo.SysMenuOperationVo;
 import com.oner365.sys.vo.check.CheckCodeVo;
 
-import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.annotation.Resource;
 
 /**
  * 菜单操作权限
@@ -122,7 +120,7 @@ public class SysMenuOperationController extends BaseController {
     @SysLog("删除菜单操作")
     @DeleteMapping("/delete")
     public List<Boolean> delete(@RequestBody String... ids) {
-        return Arrays.stream(ids).map(id -> menuOperationService.deleteById(id)).collect(Collectors.toList());
+        return Arrays.stream(ids).map(id -> menuOperationService.deleteById(id)).toList();
     }
 
     /**
