@@ -3,9 +3,6 @@ package com.oner365.sys.controller.system;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.annotation.Resource;
 
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -31,8 +28,9 @@ import com.oner365.sys.service.ISysMenuTypeService;
 import com.oner365.sys.vo.SysMenuTypeVo;
 import com.oner365.sys.vo.check.CheckCodeVo;
 
-import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.annotation.Resource;
 
 /**
  * 菜单类型管理
@@ -140,7 +138,7 @@ public class SysMenuTypeController extends BaseController {
     @SysLog("删除菜单类型")
     @DeleteMapping("/delete")
     public List<Boolean> delete(@RequestBody String... ids) {
-        return Arrays.stream(ids).map(id -> menuTypeService.deleteById(id)).collect(Collectors.toList());
+        return Arrays.stream(ids).map(id -> menuTypeService.deleteById(id)).toList();
     }
 
 }
