@@ -3,9 +3,6 @@ package com.oner365.sys.controller.system;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import jakarta.annotation.Resource;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -31,8 +28,9 @@ import com.oner365.sys.enums.MessageTypeEnum;
 import com.oner365.sys.service.ISysMessageService;
 import com.oner365.sys.vo.SysMessageVo;
 
-import io.swagger.v3.oas.annotations.tags.Tag;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.annotation.Resource;
 
 /**
  * 消息通知
@@ -127,7 +125,7 @@ public class SysMessageController extends BaseController {
     @SysLog("删除消息")
     @DeleteMapping("/delete")
     public List<Boolean> delete(@RequestBody String... ids) {
-        return Arrays.stream(ids).map(id -> sysMessageService.deleteById(id)).collect(Collectors.toList());
+        return Arrays.stream(ids).map(id -> sysMessageService.deleteById(id)).toList();
     }
 
     /**
